--- a/musig/build.gradle
+++ b/musig/build.gradle
@@ -1,5 +1,19 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.example.musig'
+                artifactId = 'musig'
+                version = '1.0.0'
+            }
+        }
+    }
 }
 
 android {
