--- a/musig/build.gradle
+++ b/musig/build.gradle
@@ -8,7 +8,7 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.example.musig'
+                groupId = 'com.chainx.musig'
                 artifactId = 'musig'
                 version = '1.0.0'
             }
