--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 28 18:12:58 CST 2021
+#Thu Oct 28 16:53:18 CST 2021
 sdk.dir=/home/hacpy/Android/Sdk
+ndk.dir=/home/hacpy/Android/Sdk/ndk/21.4.7075529
