--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 28 16:53:18 CST 2021
+#Mon Nov 01 11:00:15 CST 2021
 sdk.dir=/home/hacpy/Android/Sdk
+ndk.dir=/home/hacpy/Android/Sdk/ndk/20.0.5594570
