--- a/musig/build.gradle
+++ b/musig/build.gradle
@@ -28,7 +28,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
 
         ndk {
-            abiFilters 'armeabi-v7a','arm64-v8a'
+            abiFilters 'armeabi-v7a'
         }
     }
 
